<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingTop="40dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/n1"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="32sp"
                    >
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="end"
                >

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="60dp"
                    android:paddingBottom="60dp"
                    android:gravity="end"
                    android:paddingEnd="20dp"
                    >

                    <Button
                        android:id="@+id/btn_play"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_jugar"
                        android:layout_margin="10dp"
                        android:textSize="30sp"
                        android:onClick="playGame"
                        ></Button>

                    <EditText
                        android:id="@+id/edit_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:background="@color/white"
                        android:hint="Usuario"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        ></EditText>
                    <EditText
                        android:id="@+id/edit_contraseña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:background="@color/white"
                        android:hint="Contraseña"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        ></EditText>
                    <Button
                        android:id="@+id/btn_perfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_perfil"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="30sp"
                        android:onClick="perfil_user"
                        ></Button>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_ajustes"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="30sp"
                        ></Button>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/btn_acerca"
                        android:textSize="30sp"></Button>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>